# iscc-sci

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
iscc_sci/: __init__.py  cli.py  code_semantic_image.py  options.py  utils.py
tests/: benchmark.py  conftest.py  test_cli.py  test_iscc_sci.py  test_utils.py
