[tool.poetry]
name = "iscc-sci"
version = "0.2.0"
description = "ISCC - Semantic Code Image"
authors = ["Titusz <tp@py7.de>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://iscc.codes"
repository = "https://github.com/iscc/iscc-sci"
keywords=["iscc", "semantic", "media", "hash", "similarity"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
sci = 'iscc_sci.cli:main'

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pillow = "*"
onnxruntime = "*"
onnxruntime-gpu = { version = "*", optional = true }
loguru = "*"
blake3 = "*"
platformdirs = "*"
pydantic-settings = "*"

[tool.poetry.extras]
gpu = ["onnxruntime-gpu"]

[tool.poetry.group.test.dependencies]
pytest = "*"
coverage = "*"
pytest-cov = "*"
iscc-samples = "*"

[tool.poetry.group.dev.dependencies]
poethepoet = "*"
ruff = "*"

[tool.poetry.group.docs.dependencies]
mdformat-gfm = "*"
mdformat-gfm-alerts = "*"
mdformat-frontmatter = "*"

[tool.ruff]
line-length = 100

[tool.ruff.format]
line-ending = "lf"

[tool.poe.tasks]
format-code = { cmd = "ruff format", help = "Code style formating with ruff" }
format-md = { cmd = "mdformat --wrap 100 --end-of-line lf README.md", help = "Markdown formating with mdformat" }
test = { cmd = "pytest --cov=iscc_sci --cov-fail-under=100", help = "Run tests with coverage" }
all = ["format-code", "format-md", "test"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
